--- a/app/src/main/res/values/unidades.xml
+++ b/app/src/main/res/values/unidades.xml
@@ -2,10 +2,10 @@
 <resources>
     <string-array name="unidades">
         <item>Selecione</item>
-        <item>KVA</item>
-        <item>KW</item>
+        <item>kVA</item>
+        <item>kW</item>
         <item>Watts</item>
         <item>Amperes</item>
-        <item>KWh</item>
+        <item>kWh</item>
     </string-array>
 </resources>
