--- a/app/src/main/res/layout/activity_form_lig_prov_calc_enc.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov_calc_enc.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     app:cardBackgroundColor="#f5f5f5"
     app:cardCornerRadius="5dp"
-    app:cardElevation="2dp"
+    app:cardElevation="1dp"
     tools:layout_editor_absoluteX="8dp"
     tools:layout_editor_absoluteY="153dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="10dp">
 
         <ImageView
             android:id="@+id/imageView8"
@@ -37,6 +38,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+
+
         <CheckBox
             android:id="@+id/checkBoxCalcEncExcedente"
             android:layout_width="0dp"
@@ -60,6 +64,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkBoxCalcEncExcedente">
@@ -67,7 +72,8 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Período (Dias)" />
+                android:hint="Período (Dias)"
+                android:inputType="number" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -79,6 +85,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcEncPeriodo">
@@ -86,8 +93,12 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Tempo (Horas)" />
+                android:hint="Tempo (Horas)"
+                android:inputType="number" />
         </android.support.design.widget.TextInputLayout>
+
+
+
 
         <CheckBox
             android:id="@+id/checkBoxCalcEncCorrente"
@@ -112,6 +123,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkBoxCalcEncCorrente">
@@ -119,8 +131,32 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="hint" />
+                android:hint="Corrente"
+                android:inputType="number" />
         </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayoutCalcEncTensao"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcEncCorrente">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Tensao"
+                android:inputType="number" />
+        </android.support.design.widget.TextInputLayout>
+
 
         <CheckBox
             android:id="@+id/checkBoxCalcEncLevCarga"
@@ -133,56 +169,9 @@
             android:layout_marginRight="8dp"
             android:text="Preencher por Levantamento de Carga "
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcEncCorrente" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutCalcEncCargaQtd1"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBoxCalcEncLevCarga">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Quantidade"
-                android:inputType="number" />
-        </android.support.design.widget.TextInputLayout>
-
-        <Spinner
-            android:id="@+id/spinnerCalcEncCargaEquip1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCalcEncCargaQtd1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textInputLayoutCalcEncCargaQtd1"
-            app:layout_constraintTop_toTopOf="@+id/textInputLayoutCalcEncCargaQtd1" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButtonCalcEncCargaAdd"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:clickable="true"
-            app:backgroundTint="@color/cardview_dark_background"
-            app:elevation="1dp"
-            app:fabSize="mini"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcEncCargaQtd1"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_add" />
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcEncTensao" />
 
 
     </android.support.constraint.ConstraintLayout>
