--- a/app/src/main/res/layout/activity_form_lig_prov_calc_info.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov_calc_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:cardBackgroundColor="#f5f5f5"
     app:cardCornerRadius="5dp"
-    app:cardElevation="2dp"
+    app:cardElevation="1dp"
     tools:layout_editor_absoluteX="8dp"
     tools:layout_editor_absoluteY="153dp">
 
@@ -24,7 +24,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@color/colorPrimary" />
-
         <TextView
             android:id="@+id/textView12"
             android:layout_width="wrap_content"
@@ -39,8 +38,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/textViewInfoTotDec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -48,8 +48,8 @@
             android:layout_marginTop="3dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="Carga Total Declarada: XXX KWh"
-            android:textSize="18sp"
+            android:text="Carga Total Declarada: ---"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,14 +63,14 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="Carga Total Encontrada: XXX KWh"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView13"
-            app:layout_constraintTop_toBottomOf="@+id/textView13" />
+            app:layout_constraintStart_toStartOf="@+id/textViewInfoTotDec"
+            app:layout_constraintTop_toBottomOf="@+id/textViewInfoTotDec" />
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/textViewInfoCorrente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -78,8 +78,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="Corrente: XXX KWh"
-            android:textSize="18sp"
+            android:text="Corrente: ---"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView14"
@@ -91,9 +91,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Levantamento: XXX KWh"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="@+id/textView15"
-            app:layout_constraintTop_toBottomOf="@+id/textView15" />
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/textViewInfoCorrente"
+            app:layout_constraintTop_toBottomOf="@+id/textViewInfoCorrente" />
 
         <TextView
             android:id="@+id/textView17"
@@ -104,7 +104,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:text="Diferença de consumo: XXX KWh"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
