Finalizacao da parte de cálculos das LPs

--- a/app/src/main/res/layout/activity_form_lig_prov_calc_enc.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov_calc_enc.xml
@@ -173,6 +173,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalcEncTensao" />
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floatingActionButtonCalcEncLevCarga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            android:visibility="gone"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/checkBoxCalcEncLevCarga"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/checkBoxCalcEncLevCarga"
+            app:layout_constraintTop_toBottomOf="@+id/checkBoxCalcEncLevCarga"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/ic_list_light" />
+
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
