--- a/app/src/main/res/menu/menu_form_save.xml
+++ b/app/src/main/res/menu/menu_form_save.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_saveLP_button"
+        android:id="@+id/menu_save_button"
         android:icon="@drawable/ic_check"
         android:title="Save"
         app:showAsAction="always" />
