--- a/app/src/main/res/layout/activity_form_lig_prov_lev_carga.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov_lev_carga.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LigProvFormLevCargaActivity">
+    tools:context=".LigProvLevCargaActivity">
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/textViewLevCargaNoRecords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewLevCarga"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +32,7 @@
         />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/floatingActionButtonLevCargaAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
