--- a/app/src/main/res/layout/item_calc_lev_carga.xml
+++ b/app/src/main/res/layout/item_calc_lev_carga.xml
@@ -6,18 +6,19 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textViewLevCargaQuantidade"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView10"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewLevCargaDescricao"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView10"
+        app:layout_constraintTop_toTopOf="@+id/textViewLevCargaDescricao"
         tools:text="8888" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textViewLevCargaDescricao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -26,37 +27,39 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView13"
+        app:layout_constraintEnd_toStartOf="@+id/textViewLevCargaPotencia"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintStart_toEndOf="@+id/textViewLevCargaQuantidade"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Descrição da carga" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textViewLevCargaPotencia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView10"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toTopOf="@+id/textView10"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewLevCargaDescricao"
+        app:layout_constraintEnd_toStartOf="@+id/imageButtonLevCargaDelete"
+        app:layout_constraintStart_toEndOf="@+id/textViewLevCargaDescricao"
+        app:layout_constraintTop_toTopOf="@+id/textViewLevCargaDescricao"
         tools:text="8888 W" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/imageButtonLevCargaDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@android:drawable/screen_background_light_transparent"
         android:tint="@color/cardview_dark_background"
-        app:layout_constraintBottom_toBottomOf="@+id/textView10"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewLevCargaDescricao"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView10"
+        app:layout_constraintTop_toTopOf="@+id/textViewLevCargaDescricao"
         app:srcCompat="@drawable/ic_delete_dark" />
 
 </android.support.constraint.ConstraintLayout>
