Modificado os ícones do menu para clandestinos e LPs

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -30,8 +30,8 @@
 
             <ImageView
                 android:id="@+id/imageViewIntentLP"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
@@ -42,7 +42,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed"
-                app:srcCompat="@drawable/ic_lp" />
+                app:srcCompat="@drawable/tomada" />
 
             <TextView
                 android:id="@+id/imageViewIntentLP2"
@@ -54,6 +54,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
+                android:gravity="center"
                 android:text="Ligações Provisórias"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -90,8 +91,8 @@
 
             <ImageView
                 android:id="@+id/imageViewClandest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
@@ -102,7 +103,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed"
-                app:srcCompat="@drawable/ic_warning_dark" />
+                app:srcCompat="@drawable/pirata" />
 
             <TextView
                 android:id="@+id/imageViewClandestl2"
@@ -114,6 +115,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
+                android:gravity="center"
                 android:text="Ligações Clandestinas"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -151,8 +153,8 @@
 
             <ImageView
                 android:id="@+id/cardViewIntentFiscal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
@@ -175,6 +177,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
+                android:gravity="center"
                 android:text="Fiscalizações"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -208,8 +211,8 @@
 
             <ImageView
                 android:id="@+id/imageViewImportar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
@@ -232,6 +235,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
+                android:gravity="center"
                 android:text="Importar bases"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
