Removido uma descricao e observacao da importacao e de todo o projeto. E adição de disjuntor no nome do campo de proteção do cadastro de clandestinos

--- a/app/src/main/res/layout/frag_clandestino_form.xml
+++ b/app/src/main/res/layout/frag_clandestino_form.xml
@@ -201,7 +201,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Proteção" />
+                android:hint="Proteção (Disjuntor)" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
